--- a/BlockEscape/Base.lproj/Main.storyboard
+++ b/BlockEscape/Base.lproj/Main.storyboard
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,7 +23,7 @@
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                                 <state key="normal" title="Scores">
-                                    <color key="titleColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <segue destination="Peq-wx-c2X" kind="show" id="LgS-P9-zrm"/>
@@ -34,7 +36,7 @@
                                     <attributedString key="attributedTitle">
                                         <fragment content="Start">
                                             <attributes>
-                                                <color key="NSColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="NSColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <font key="NSFont" size="26" name=".AppleSystemUIFont"/>
                                             </attributes>
                                         </fragment>
@@ -68,11 +70,11 @@
             <objects>
                 <viewController id="V9y-lv-cfV" customClass="BlockEscapeViewController" customModule="BlockEscape" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="KIe-x8-tA8" customClass="SKView">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tQA-5z-W7l">
-                                <rect key="frame" x="20" y="10" width="54" height="28"/>
+                                <rect key="frame" x="340" y="44" width="54" height="38"/>
                                 <state key="normal" title="Exit"/>
                                 <connections>
                                     <segue destination="3jr-YB-IuF" kind="unwind" unwindAction="unwindFromBlockEscapeWithSender:" id="1zf-YT-o7I"/>
@@ -81,10 +83,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="tQA-5z-W7l" firstAttribute="top" secondItem="dfD-W3-ni5" secondAttribute="top" constant="10" id="NN7-6Q-Vd8"/>
-                            <constraint firstItem="dfD-W3-ni5" firstAttribute="trailing" secondItem="tQA-5z-W7l" secondAttribute="trailing" constant="340" id="bDG-y4-ZDN"/>
-                            <constraint firstItem="tQA-5z-W7l" firstAttribute="leading" secondItem="dfD-W3-ni5" secondAttribute="leading" constant="20" id="v78-Oh-RAO"/>
-                            <constraint firstItem="dfD-W3-ni5" firstAttribute="bottom" secondItem="tQA-5z-W7l" secondAttribute="bottom" constant="770" id="wQJ-1o-ouP"/>
+                            <constraint firstItem="tQA-5z-W7l" firstAttribute="top" secondItem="dfD-W3-ni5" secondAttribute="top" id="NN7-6Q-Vd8"/>
+                            <constraint firstItem="dfD-W3-ni5" firstAttribute="trailing" secondItem="tQA-5z-W7l" secondAttribute="trailing" constant="20" id="bDG-y4-ZDN"/>
+                            <constraint firstItem="tQA-5z-W7l" firstAttribute="leading" secondItem="dfD-W3-ni5" secondAttribute="leading" constant="340" id="v78-Oh-RAO"/>
+                            <constraint firstItem="dfD-W3-ni5" firstAttribute="bottom" secondItem="tQA-5z-W7l" secondAttribute="bottom" constant="780" id="wQJ-1o-ouP"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dfD-W3-ni5"/>
                     </view>
@@ -99,9 +101,9 @@
             <objects>
                 <viewController id="Peq-wx-c2X" customClass="ScoresViewController" customModule="BlockEscape" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Xma-1l-8EN">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="aIK-pH-5dG"/>
                     </view>
                     <navigationItem key="navigationItem" id="2bg-mN-4c8"/>
